--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-html-to-pdf": "^0.9.1",
     "react-native-number-selector": "^1.0.1",
+    "react-native-orientation": "^3.1.3",
     "react-native-orientation-locker": "^1.2.0",
     "react-native-render-html": "^4.2.4",
     "react-native-screens": "~2.10.1",
